--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,7 @@ jobs:
         with:
           repository: "phpstan/build-cs"
           path: "build-cs"
+          ref: "1.x"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
