--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"phpstan/phpstan": "^2.0"
 	},
 	"require-dev": {
+		"nikic/php-parser": "^5.1",
 		"php-parallel-lint/php-parallel-lint": "^1.2",
 		"phpstan/phpstan-deprecation-rules": "^2.0",
 		"phpstan/phpstan-phpunit": "^2.0",
